--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -7,7 +7,8 @@
   width: 270px;
   height: 100%;
   background-color: #0B334D;
-  color: #fff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: white;
   padding-top: 20px;
   display: flex;
   flex-direction: column;
@@ -29,7 +30,7 @@
   font-family: "Frijole", system-ui;
   font-size: 35px; 
   font-weight: 700; 
-  color: #ffffff;  
+  color: white;  
   text-align: center; 
   text-transform: uppercase; 
   letter-spacing: 2px; 
